attic/kube-prometheus-stack/ingress.grafana.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  creationTimestamp: null
  name: kps-grafana
  namespace: monitoring
spec:
  rules:
  - host: kps-grafana.pekware.club
    http:
      paths:
      - backend:
          service:
            name: kube-prometheus-stack-grafana
            port:
              number: 80
        path: /
        pathType: Prefix
  tls:
  - hosts:
    - kps-grafana.pekware.club
    secretName: star.pekware.club
status:
  loadBalancer: {}
